Put hint in search box, changed books to park

--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -15,7 +15,7 @@
             {% endfor %}
         </u1>
     {% else %}
-        <p>No books matches your search criteria.</p>
+        <p>No park matches your search criteria.</p>
     {% endif %}
 </body>
 </html>
