--- a/search/templates/search/index.html
+++ b/search/templates/search/index.html
@@ -3,6 +3,6 @@
 <link rel="stylesheet" type="text/css" href="{% static 'search/style.css' %}" />
 
 <form action="{% url 'search:results' %}" method="get">
-    <input type="text" name="q">
+    <input type="text" name="q" placeholder="Park name">
     <input type="submit" value="Search">
 </form>
