--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -1,12 +1,12 @@
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Park Search</title>
 </head>
 <body>
-    <p>You searched for: <strong>{{ query }}</strong></p>
-
+    {% if query != "" %}
+        <p>You searched for: <strong>{{ query }}</strong></p>
+    {% endif %}
     {% if reports %}
         <p>Found {{ reports|length }} park{{ reports|pluralize }}.</p>
         <u1>
