--- a/search/templates/search/index.html
+++ b/search/templates/search/index.html
@@ -7,5 +7,6 @@
     <input type="submit" value="Search">
 </form>
 
-{% load thumbnail %}
-<img src="{% thumbnail "stockpark.jpg" 50x50 crop %}" alt="" />
+<a target="_blank" href="media/stockpark.jpg">
+  <img src="media/stockpark.jpg" alt="Forest">
+</a>
