--- a/search/templates/search/index.html
+++ b/search/templates/search/index.html
@@ -13,6 +13,10 @@
   <input type="submit" value="Search">
 </form>
 
+<iframe width="600" height="450" frameborder="0" style="border:0" 
+  src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJY_dFYHKHhYARMKc772iLvnE&key=AIzaSyBMDvz4zozQwoRPNcXrFX8OCGDp6c1FL7E" allowfullscreen>
+</iframe>
+
 <a target="_blank" href="media/stockpark.jpg">
   <img src="media/stockpark.jpg" alt="Forest">
 </a>
