--- a/search/templates/search/index.html
+++ b/search/templates/search/index.html
@@ -17,6 +17,8 @@
   src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJY_dFYHKHhYARMKc772iLvnE&key=AIzaSyBMDvz4zozQwoRPNcXrFX8OCGDp6c1FL7E" allowfullscreen>
 </iframe>
 
+<img width="400" src="https://maps.googleapis.com/maps/api/staticmap?center=Mission+Dolores+Park&zoom=13&scale=1&size=400x400&maptype=roadmap&key=AIzaSyD_g-oOuyVFlnlCbL7JLkO9wt-UOWruIMg&format=png&visual_refresh=true" alt="Google Map of Mission Dolores Park">
+
 <a target="_blank" href="media/stockpark.jpg">
   <img src="media/stockpark.jpg" alt="Forest">
 </a>
