--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -13,11 +13,25 @@
         <p>Found {{ reports|length }} park{{ reports|pluralize }}.</p>
         <u1>
             {% for issue in reports %}
-            <li><img src="../{{ MEDIA_URL }}{{ issue.image }}"/> {{ issue.park.name }} -- {{ issue.sub_date }} -- {{ issue.description }}</li>
+            <li><img src="../{{ MEDIA_URL }}{{ issue.image }}"/> {{ issue.park.name }} -- {{ issue.sub_date }} -- {{ issue.description }}
+                <iframe width="400" height="400" frameborder="0" style="border:0"
+                    src="{{ issue.park.maps_string }}" allowfullscreen>
+                </iframe>
+            </li>
             {% endfor %}
         </u1>
     {% else %}
-        <p>No park matches your search criteria.</p>
+        <p>No park matches your search criteria, here are all reports.</p>
+        <u1>
+        {% for issue in all_reports %}
+            <li><img src="../{{ MEDIA_URL }}{{ issue.image }}"/> {{ issue.park.name }} -- {{ issue.sub_date }} -- {{ issue.description }}
+                <iframe width="400" height="400" frameborder="0" style="border:0"
+                    src="{{ issue.park.maps_string }}" allowfullscreen>
+                </iframe>
+            </li>
+        {% endfor %}
+        </u1>
+
     {% endif %}
 </body>
 </html>
