--- a/search/templates/search/homepage.html
+++ b/search/templates/search/homepage.html
@@ -1,6 +1,11 @@
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
+
+<link rel="stylesheet" type="text/css" href="{% static 'search/style.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'search/bootstrap.min.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />
 
   <head>
 
@@ -11,12 +16,6 @@
 
     <title>Park Go Green</title>
     <img src= "Park Go Green.png" style = "width:200px;height:200px;">
-
-    <!-- Bootstrap core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="modern-business.css" rel="stylesheet">
 
 
   </head>
