Moved "park go green.png" to static folder, runserver issue solved.  Homepage.html tested and is loading css/images properly from the static folder.

--- a/search/templates/search/homepage.html
+++ b/search/templates/search/homepage.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'search/style.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'search/bootstrap.min.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />
+<img src="{% static "search/Park Go Green.png" %}"/>
 
   <head>
 
@@ -15,7 +16,6 @@
     <meta name="author" content="">
 
     <title>Park Go Green</title>
-    <img src= "Park Go Green.png" style = "width:200px;height:200px;">
 
 
   </head>
