--- a/search/templates/search/homepage.html
+++ b/search/templates/search/homepage.html
@@ -5,8 +5,8 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'search/style.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'search/bootstrap.min.css' %}" />
-<link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />
-<img src="{% static "search/Park Go Green.png" %}"/>
+<!--<link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />-->
+<img src="{% static "search/Park Go Green.png" %}" />
 
   <head>
 
@@ -20,17 +20,18 @@
 
   </head>
 <h1 class="my-4"></h1>
-  <form action="{% url 'search:results' %}" method="get">
-      <input type="text" name="q" placeholder="Search by park name" autocomplete="off">
+  <center>
+  <form style="padding-bottom: 50px;" action="{% url 'search:results' %}" method="get">
           <select name="dropdown">
             <option value="" selected hidden>Select a category</option>
               {% for category in categories %}
                   <option value={{ category.type }}>{{ category.type }}</option>
               {% endfor %}
           </select>
+    <input type="text" name="q" placeholder="Search by park name" autocomplete="off">
       <input type="submit" value="Search">
   </form>
-
+  </center>
 
   <body>
 
@@ -67,25 +68,33 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
-
 
 
       <!-- Portfolio Section -->
-      <h2>Listings</h2>
+      <h2 style="padding: 50px;"> Listings</h2>
 
       <div class="row">
-        <div class="col-lg-4 col-sm-6 portfolio-item">
-          <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
-            <div class="card-body">
-              <h4 class="card-title">
-                <a href="#">Project One</a>
-              </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-            </div>
+        <section>
+  <div class="container">
+    <div class="card">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="card-block">
+            <h4 class="card-title">Curabitur gravida vestibulum imperdiet.</h4>
+            <p class="card-text">Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imperdiet sem. Integer sed mi quis nisl eleifend interdum.</p>
+            <p class="card-text">Cras convallis ut turpis vitae facilisis. Morbi eu augue vel quam efficitur rhoncus vitae eget lectus. Cras augue ligula, aliquam ut enim ut, feugiat imperdiet sem.</p>
+            <a href="#" class="btn btn-primary">Read More</a>
           </div>
         </div>
+        <div class="col-md-6">
+          <div style="float: left;"  class="card-img-bottom">
+            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
         <div class="col-lg-4 col-sm-6 portfolio-item">
           <div class="card h-100">
             <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
@@ -142,8 +151,9 @@
           </div>
         </div>
       </div>
+    </div>
       <!-- /.row -->
-
+    </div>
 
       <hr>
 
