--- a/search/templates/search/homepage.html
+++ b/search/templates/search/homepage.html
@@ -100,20 +100,21 @@
 
 <div class="row">
 
+    {% for report in latest %}
     <section>
         <div class="container" style="padding-bottom: 40px">
             <div class="card" style="width: 80%;">
                 <div class="row">
                     <div class="col-md-6">
                         <div style="float: left;" class="card-img-bottom">
-                            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+                            <img class="card-img-top" src="../{{ report.thumbnail.url }}" alt="">
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-block">
                             <h4 class="card-title"></h4>
-                            <p class="card-text">Subject:</p>
-                            <p class="card-text">Location:</p>
+                            <p class="card-text">Subject: {{ report.type }}</p>
+                            <p class="card-text">Location: {{ report.park }}</p>
                             <a href="#" class="btn btn-dark">Read More</a>
                         </div>
                     </div>
@@ -121,27 +122,7 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="container">
-            <div class="card" style="width: 80%;">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div style="float: left;" class="card-img-bottom">
-                            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card-block">
-                            <h4 class="card-title"></h4>
-                            <p class="card-text">Subject:</p>
-                            <p class="card-text">Location:</p>
-                            <a href="#" class="btn btn-dark">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    {% endfor %}
 
 </div>
 <!-- /.row -->
