--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% extends "search/base_generic.html" %}
 
 <html lang="en">
 <head>
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'search/style.css' %}"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -24,7 +23,7 @@
 
 </head>
 <body>
-
+{% block content %}
 {% if query != "" %}
     <br>
     <p>You searched for: <strong>{{ query }}</strong></p>
@@ -81,6 +80,6 @@
 
     {% endfor %}
 {% endif %}
-
+{% endblock %}
 </body>
 </html>
