--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -13,22 +13,27 @@
 
 
     <div class="row" style="float: right">
-        <form>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Username</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                       placeholder="Enter username">
-                <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-
-        </form>
-        <form>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-            </div>
-
-        </form>
+{#        <form>#}
+{#            <div class="form-group">#}
+{#                <label for="exampleInputEmail1">Username</label>#}
+{#                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"#}
+{#                       placeholder="Enter username">#}
+{#                <button type="submit" class="btn btn-default">Submit</button>#}
+{#            </div>#}
+{##}
+{#        </form>#}
+{#        <form>#}
+{#            <div class="form-group">#}
+{#                <label for="exampleInputPassword1">Password</label>#}
+{#                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">#}
+{#            </div>#}
+{##}
+{#        </form>#}
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
     </div>
 </div>
 
