--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'search/bootstrap.min.css' %}"/>
 
 <!--<link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />-->
-<img src="{% static "search/Park Go Green.png" %}" style="float: left"/>
+<a href="../"><img src="{% static "search/Park Go Green.png" %}" style="float: left"/></a>
 <div class="container">
 
 
