--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -11,25 +11,33 @@
     <!-- Portfolio Item Row -->
     <div class="row">
 
-        <div class="col-md-8">
+        <div class="col-md-4">
             <img class="img-fluid" src="http://placehold.it/750x500" alt="">
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-8">
 
-            <h3 class="my-3">Project Details</h3>
+            <h3 class="my-6" style="padding-bottom: 20px">Park Information</h3>
             <ul>
-                <li><p>Park: {{ report.park.name }}</p></li>
-                <li><p>Issue: {{ report.description }}</p></li>
-                <li><p>Submission date: {{ report.sub_date }}</p></li>
+                <div class="row">
+                    <div class="col">
+                        <li style="padding-right: 100px"><p>Park: {{ report.park.name }}</p></li>
+                        <li style="padding-right: 100px"><p>Submission date: {{ report.sub_date }}</p></li>
+                    </div>
+                     <div class="col">
+                        <li style="padding-right: 100px"><p>Issue: {{ report.description }}</p></li>
+                    </div>
+                </div>
+
             </ul>
         </div>
-        <h3 class="my-3">Details</h3>
+
+    </div>
+
+    <h3 class="my-3">Details</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque
                 urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
                 justo eu convallis placerat, felis enim.</p>
-
-    </div>
     <!-- /.row -->
 
     <!-- Related Projects Row -->
