--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -12,7 +12,7 @@
     <div class="row">
 
         <div class="col-md-4">
-            <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+            <img class="img-fluid" src="../{{ report.thumbnail.url }}" alt="">
         </div>
 
         <div class="col-md-8">
