--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -24,7 +24,7 @@
                         <li style="padding-right: 100px"><p>Park: {{ report.park.name }}</p></li>
                         <li style="padding-right: 100px"><p>Submission date: {{ report.sub_date }}</p></li>
                     </div>
-                     <div class="col">
+                    <div class="col">
                         <li style="padding-right: 100px"><p>Issue: {{ report.description }}</p></li>
                     </div>
                 </div>
@@ -35,9 +35,10 @@
     </div>
 
     <h3 class="my-3">Details</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque
-                urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
-                justo eu convallis placerat, felis enim.</p>
+    <p style="padding-bottom: 50px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
+        gravida pellentesque
+        urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
+        justo eu convallis placerat, felis enim.</p>
     <!-- /.row -->
 
     <!-- Related Projects Row -->
@@ -45,5 +46,11 @@
 </div>
 <!-- /.row -->
 
+<footer class="py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+    </div>
+    <!-- /.container -->
+</footer>
 
 {% endblock %}
