Added category information to individual park page

--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -26,6 +26,7 @@
                     </div>
                     <div class="col">
                         <li style="padding-right: 100px"><p>Issue: {{ report.description }}</p></li>
+                        <li style="padding-right: 100px"><p>Category: {{ report.type }}</p></li>
                     </div>
                 </div>
 
