--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -45,6 +45,16 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116677924-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-116677924-1');
+    </script>
+
     <title>Park Go Green</title>
 
 
