--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -12,7 +12,7 @@
     <div class="row">
 
         <div class="col-md-4">
-            <img class="img-fluid" src="../{{ report.thumbnail.url }}" alt="">
+            <a href="../{{ report.image.url }}"><img class="img-fluid" src="../{{ report.image.url }}" alt=""></a>
         </div>
 
         <div class="col-md-8">
