--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -37,8 +37,8 @@
     {% for issue in reports %}
         <div class="row w3-margin-bottom">
             <div class="col-sm-4">
-                <a href="../{{ issue.thumbnail.url }}">
-                    <img src="../{{ issue.thumbnail.url }}" class="img-thumbnail"/></a>
+                <a href="../{{ issue.image.url }}">
+                    <img src="../{{ issue.image.url }}" class="img-thumbnail"/></a>
             </div>
             <div class="col-sm-4">
                 <p>Park: {{ issue.park.name }} </p>
