Logo always goes to index now

--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'search/bootstrap.min.css' %}"/>
 
 <!--<link rel="stylesheet" type="text/css" href="{% static 'search/modern-business.css' %}" />-->
-<a href="../"><img src="{% static "search/Park Go Green.png" %}" style="float: left"/></a>
+<a href="{% url 'search:index' %}"><img src="{% static "search/Park Go Green.png" %}" style="float: left"/></a>
 <div class="container">
 
 
