--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -29,11 +29,13 @@
 {#            </div>#}
 {##}
 {#        </form>#}
+
         {% if user.is_authenticated %}
             <a href="{% url 'logout' %}">Logout</a>
         {% else %}
             <a href="{% url 'login' %}">Login</a>
         {% endif %}
+        <a href="{% url 'search:signup' %}">Sign Up</a>
     </div>
 </div>
 
