--- a/search/templates/search/base_generic.html
+++ b/search/templates/search/base_generic.html
@@ -102,7 +102,7 @@
                     <a class="btn btn-dark btn-lg" class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-dark btn-lg" class="nav-link" href="contact.html">Post Report</a>
+                    <a class="btn btn-dark btn-lg" class="nav-link" href="{% url 'search:postnew' %}">Post Report</a>
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-dark btn-lg" class="nav-link" href="contact.html">Contact Us</a>
