--- a/search/templates/search/report_detail.html
+++ b/search/templates/search/report_detail.html
@@ -1,7 +1,7 @@
 {% extends "search/base_generic.html" %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 {% block content %}
-
 
 <div class="container">
 
@@ -25,21 +25,20 @@
                         <li style="padding-right: 100px"><p>Submission date: {{ report.sub_date }}</p></li>
                     </div>
                     <div class="col">
-                        <li style="padding-right: 100px"><p>Issue: {{ report.description }}</p></li>
                         <li style="padding-right: 100px"><p>Category: {{ report.type }}</p></li>
                     </div>
                 </div>
 
             </ul>
+
         </div>
+
 
     </div>
 
-    <h3 class="my-3">Details</h3>
-    <p style="padding-bottom: 50px">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
-        gravida pellentesque
-        urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies,
-        justo eu convallis placerat, felis enim.</p>
+    <h3 class="my-3">Issue</h3>
+    <p style="padding-right: 100px">{{ report.description }}</p>
+
     <!-- /.row -->
 
     <!-- Related Projects Row -->
