--- a/search/templates/search/search_results.html
+++ b/search/templates/search/search_results.html
@@ -21,6 +21,18 @@
 <body>
 {% block content %}
 <br>
+
+<p hidden>
+    {% block dropdown %}{{dropdown}}{% endblock %}
+    {% block query %}{{query}}{% endblock %}
+</p>
+
+{% block category %}
+    {% for category in categories %}
+        <option value="{{category}}" selected="selected" {% endif %}>
+    {% endfor %}
+{% endblock %}
+
 {% if query %}
     <p>You searched for: <strong>{{ query }}</strong></p>
 {% endif %}
